[gd_scene load_steps=5 format=3 uid="uid://qkv4525o0a8r"]

[ext_resource type="Script" path="res://survivors_game.gd" id="1_qn1fx"]
[ext_resource type="PackedScene" uid="uid://cqn034cbcke4i" path="res://player.tscn" id="1_xs02x"]
[ext_resource type="PackedScene" uid="uid://chnrxftqcfubu" path="res://pine_tree.tscn" id="2_o48cd"]

[sub_resource type="Curve2D" id="Curve2D_momac"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -404, -230, 0, 0, 0, 0, 1680.91, -220.554, 0, 0, 0, 0, 1674.97, 983.38, 0, 0, 0, 0, -392, 980, 0, 0, 0, 0, -404, -230)
}
point_count = 5

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_qn1fx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = -347.0
offset_top = -173.0
offset_right = 1555.0
offset_bottom = 904.0
color = Color(0.444812, 0.630295, 0.263974, 1)

[node name="Player" parent="." instance=ExtResource("1_xs02x")]
unique_name_in_owner = true
position = Vector2(528, 366)
platform_floor_layers = 0

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-794.1, -484.61)
scale = Vector2(1.30173, 1.31039)
curve = SubResource("Curve2D_momac")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-404, -230)
rotation = 0.00453062

[node name="PineTree" parent="." instance=ExtResource("2_o48cd")]
position = Vector2(250, 461)

[node name="PineTree5" parent="." instance=ExtResource("2_o48cd")]
position = Vector2(869, 195)

[node name="PineTree3" parent="." instance=ExtResource("2_o48cd")]
position = Vector2(940, 250)

[node name="PineTree2" parent="." instance=ExtResource("2_o48cd")]
position = Vector2(282, 169)

[node name="PineTree4" parent="." instance=ExtResource("2_o48cd")]
position = Vector2(885, 555)

[node name="PineTree6" parent="." instance=ExtResource("2_o48cd")]
position = Vector2(852, 295)

[node name="Spawner" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.870588, 0, 0.270588, 0.517647)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -34.5
offset_right = 129.0
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "GameOver"

[node name="Button" type="Button" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -164.0
offset_right = 80.0
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Reset"

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Spawner" to="." method="_on_spawner_timeout"]
[connection signal="pressed" from="GameOver/ColorRect/Button" to="." method="_on_button_pressed"]
